# python-sample-vscode-flask-tutorial

./: pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: python-app.yml
