[tool.poetry]
name = "Demo Flask Project"
version = "0.1.0"
description = "An example project"
authors = ["Microsoft"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"  
flask = "^2.2.0"  
numpy = "^1.24.0"  
requests = "^2.31.0"  
flake8 = "^6.0.0" 
pytest = "^8.3.4" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
